Added routes to get and add functions. Client side scripts to get and add functions.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/Snekw/jsRojektiV2",
   "devDependencies": {
-    "browser-sync": "^2.18.8"
+    "bootstrap": "^3.3.7",
+    "browser-sync": "^2.18.8",
+    "jquery": "^3.2.0"
   },
   "dependencies": {
     "body-parser": "^1.16.1",
